[package]
name = "mathvis"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = {version = "2.0.1", features = ["display"]}
nom = "7.1.3"
num = "0.4.3"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.8.5"
